// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon.web renders a snapshot 1`] = `
.c0 {
  position: relative;
}

<mapProps(Styled(Image))
  className="c0"
  size={16}
  src="any source"
/>
`;

exports[`Icon.web renders a snapshot with \`size:large\` 1`] = `
.c0 {
  position: relative;
}

<mapProps(Styled(Image))
  className="c0"
  size="large"
  src="any source"
/>
`;
